# libbhohelper

./: CMakeLists.txt  README.md  default.props  libbhohelper.sln
code/: libbhohelper.vcxproj  libbhohelper.vcxproj.filters
code/include/: IDispatchExImpl.h  libbhohelper.h
code/src/: AtlFnInfos.cpp  ComLibrary.cpp  IDispatchHelper.cpp  stdafx.cpp  stdafx.h
libbhohelper/: AtlFnInfos.cpp  IDispatchHelper.cpp  libbhohelper.h  libbhohelper.vcproj  stdafx.cpp  stdafx.h  uri.cpp
tests/: Dummy.cpp  libbhohelper_tests.vcxproj  libbhohelper_tests.vcxproj.filters
